# django-mysite

./: Dockerfile  docker-compose.yaml  new_orders.csv  pyproject.toml  requirements.txt
CBV/mysite/shopapp/: views.py
mysite/: alldata.json  log.txt  shopapp.json
mysite/blogapp/: models.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py  0002_category.py  0003_tag.py  0004_article.py  0005_alter_article_pub_date.py  0006_alter_article_pub_date.py
mysite/blogapp/templates/blogapp/: article_form.html  article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myauth/: forms.py  models.py  urls.py  views.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py  0003_alter_profile_avatar.py  0004_alter_profile_avatar.py  0005_alter_profile_avatar.py  0006_alter_profile_user.py
mysite/myauth/templates/myauth/: about_me.html  base.html  login.html  profile_detail.html  profile_form.html  register.html  (+1 more)
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: middlewares.py  urls.py  views.py
mysite/shopapp/: admin.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_order.py  0003_alter_order_promocode.py  0004_product_created_by.py  0005_alter_product_options.py  0006_alter_order_options.py  0007_productimage.py  0008_alter_order_created_at_alter_order_delivery_address_and_more.py  0009_product_updated_at.py
(+23 files in other folders)
